solved overflow  scrolling in tables

--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,19 @@
 @import "tailwindcss";
 
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+    position: relative;
+}
+
+body {
+    overscroll-behavior-x: none;
+}
+
 .loader {
     border: 16px solid #ffffff;
     border-radius: 50%;
